--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@
 						</ul>
 					</ul>
 				</li>
-	
 				<div class="section-block-one">
 					<span ><img class="section-image-one" src="assets/image-lending/1920/block 1-1.png" alt=""></span>
 					<span ><img class="section-image-two" src="assets/image-lending/1920/block 1-2.png" alt=""></span>
@@ -127,7 +126,6 @@
 				<div class="section-as-video">
 					<iframe class="section-as-iframe-video" src="http://www.youtube.com/embed/SKOo0AYtYJg" frameborder="0" allowfullscreen></iframe>
 				</div>
-				<!-- <div class="star-five"></div> -->
 			</section>
 			<p class="section-about-as-heading"><span class="about-as-heading-color">БУДЬ ПЕРВЫМ</span> - ПОМОГИ НАМ <br> ПРОТЕСТИРОВАТЬ ПРИЛОЖЕНИЕ</p>
 			
@@ -141,27 +139,27 @@
 						<li class="block-first-color-for">Пиши о проблемах в чат с основателем<br>ID SFERA 100 100 000 </li>
 					</ul>
 				</div>
-
 				<div class="block-for-image">
 					<span ><img class="block-for-image-one" src="assets/image-lending/1920/block 3-1.png" alt=""></span>
 					<span ><img class="block-for-image-two" src="assets/image-lending/1920/block 3-2.png" alt=""></span>
 				</div>
-		
 			</section>
 			
-<section class="section-card">
+		<section class="section-card">
 			<p class="about-as-heading">ЧТО ЕСТЬ <span class="about-as-heading-color"> УЖЕ СЕЙЧАС</span></p>
-			<div class="star-seven"></div>
-			<div class="star-eight"></div>
 			<div class="card">
 				<div class="card-block">
 					<button class="card-block-top">ASAP</button>
 					<div class="product-inner">
 						<div class="product-front">
-							<div class="front"></div>
+							<div>
+								<img class="front" src="assets/img/apps/asap_ios.png" alt="">
+							</div>
 						</div>
 						<div class="product-back">
-							<div class="back"></div>
+							<div>
+								<img class="back"src="assets/img/apps/asap_android.png" alt="">
+							</div>
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -172,10 +170,14 @@
 					<button class="card-block-top">Профиль</button>
 					<div class="product-inner">
 						<div class="product-front">
-							<div class="front-two"></div>
+							<div>
+								<img class="front-two" src="assets/img/apps/profile_ios.png" alt="">
+							</div>
 						</div>
 						<div class="product-back">
-							<div class="back-two"></div>
+							<div>
+								<img class="back-two" src="assets/img/apps/profile_android.png" alt="">
+							</div>
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -186,10 +188,14 @@
 					<button class="card-block-top">Лента</button>
 					<div class="product-inner">
 						<div class="product-front">
-							<div class="front-three"></div>
+							<div>
+								<img class="front-three" src="assets/img/apps/lenta_ios.png" alt="">
+							</div>
 						</div>
 						<div class="product-back">
-							<div class="back-three"></div>
+							<div>
+								<img class="back-three" src="assets/img/apps/lenta_android.png" alt="">
+							</div>
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -200,10 +206,14 @@
 					<button class="card-block-top">VideoS</button>
 					<div class="product-inner">
 						<div class="product-front">
-							<div class="front-four"></div>
+							<div>
+								<img  class="front-four" src="assets/img/apps/video_ios.png" alt="">
+							</div>
 						</div>
 						<div class="product-back">
-							<div class="back-four"></div>
+							<div>
+								<img class="back-four" src="assets/img/apps/videos_android.png" alt="">
+							</div>
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -214,10 +224,14 @@
 					<button class="card-block-top">BlackBox</button>
 					<div class="product-inner">
 						<div class="product-front">
-							<div class="front-five"></div>
+							<div>
+								<img class="front-five" src="assets/img/apps/blackbox_ios.png" alt="">
+							</div>
 						</div>
 						<div class="product-back">
-							<div class="back-five"></div>
+							<div>
+								<img class="back-five" src="assets/img/apps/blackbox_android.png" alt="">
+							</div>
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -228,10 +242,14 @@
 					<button class="card-block-top">FindFriends</button>
 					<div class="product-inner">
 						<div class="product-front">
-							<div class="front-six"></div>
+							<div>
+								<img class="front-six" src="assets/img/apps/findfriends_ios.png" alt="">
+							</div>
 						</div>
 						<div class="product-back">
-							<div class="back-six"></div>
+							<div>
+								<img class="back-six" src="assets/img/apps/findfriends_android.png" alt="">
+							</div>
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -242,10 +260,14 @@
 					<button class="card-block-top">MeetNet</button>
 					<div class="product-inner">
 						<div class="product-front">
-							<div class="front-seven"></div>
+							<div>
+								<img class="front-seven" src="assets/img/apps/meetnet_ios.png" alt="">
+							</div>
 						</div>
 						<div class="product-back">
-							<div class="back-seven"></div>
+							<div>
+								<img class="back-seven" src="assets/img/apps/meetnet_android.png" alt="">
+							</div>
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -256,10 +278,14 @@
 					<button class="card-block-top">JobLite</button>
 					<div class="product-inner">
 						<div class="product-front">
-							<div class="front-eight"></div>
+							<div>
+								<img class="front-eight" src="assets/img/apps/joblite_ios.png" alt="">
+							</div> 
 						</div>
 						<div class="product-back">
-							<div class="back-eight"></div>
+							<div>
+								<img class="back-eight" src="assets/img/apps/joblite_android.png" alt="">
+							</div>
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -270,10 +296,14 @@
 					<button class="card-block-top">Choose</button>
 					<div class="product-inner">
 						<div class="product-front">
-							<div class="front-nine"></div>
+							<div>
+								<img class="front-nine" src="assets/img/apps/choose_ios.png" alt="">
+							</div>
 						</div>
 						<div class="product-back">
-							<div class="back-nine"></div>
+							<div>
+								<img class="back-nine" src="assets/img/apps/choose_android.png" alt="">
+							</div>
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -304,63 +334,63 @@
 				<p class="about-as-heading-last">СЕЙЧАС У НАС <span class="about-as-heading-color">БОЛЕЕ 20 СЕРВИСОВ</span> В РАЗРАБОТКЕ</p>
 				<ul class="block-eight-card">
 					<li class="block-eight-card-list">
-						<img src="./assets/image-lending/general/1 921.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/1 921.png" alt="">
 						<p class="block-eight-card-list-paragraf">Мероприятия</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img src="./assets/image-lending/general/2 24.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/2 24.png" alt="">
 						<p class="block-eight-card-list-paragraf">FM-каналы</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img src="./assets/image-lending/general/3.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/3.png" alt="">
 						<p class="block-eight-card-list-paragraf">Голосовые <br> каналы</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img src="./assets/image-lending/general/4.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/4.png" alt="">
 						<p class="block-eight-card-list-paragraf">Книги</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img src="./assets/image-lending/general/5.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/5.png" alt="">
 						<p class="block-eight-card-list-paragraf">Таланты</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img src="./assets/image-lending/general/6.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/6.png" alt="">
 						<p class="block-eight-card-list-paragraf">Work & <br> Business</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img src="./assets/image-lending/general/9.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/9.png" alt="">
 						<p class="block-eight-card-list-paragraf">Spor-T</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img src="./assets/image-lending/general/8.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/8.png" alt="">
 						<p class="block-eight-card-list-paragraf">Comedy-лента</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img src="./assets/image-lending/general/10.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/10.png" alt="">
 						<p class="block-eight-card-list-paragraf">sTravel</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img src="./assets/image-lending/general/11.png" alt="">
+						<img class="block-eight-card-image"src="./assets/image-lending/general/11.png" alt="">
 						<p class="block-eight-card-list-paragraf">Industry news</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img src="./assets/image-lending/general/12.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/12.png" alt="">
 						<p class="block-eight-card-list-paragraf">Art Lab</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img src="./assets/image-lending/general/13.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/13.png" alt="">
 						<p class="block-eight-card-list-paragraf">Ask Me</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img src="./assets/image-lending/general/14.png" alt="">
+						<img class="block-eight-card-image" class="block-eight-card-image" src="./assets/image-lending/general/14.png" alt="">
 						<p class="block-eight-card-list-paragraf">Calendar</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img src="./assets/image-lending/general/7.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/7.png" alt="">
 						<p class="block-eight-card-list-paragraf" >White Box</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img src="./assets/image-lending/general/7.png" alt="">
+						<img class="block-eight-card-image" src="./assets/image-lending/general/7.png" alt="">
 						<p class="block-eight-card-list-paragraf">Holy Book</p>
 					</li>
 				</ul>
