--- a/ru/apps.html
+++ b/ru/apps.html
@@ -182,9 +182,9 @@
 
                     <li class="apps__briefs-item">
                       <div class="apps__brief-images-container">
-                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/asap_ios.jpg" 
+                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/asap_ios.png" 
                           class="apps__brief-image" /></div>
-                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/asap_android.jpg" class="apps__brief-image" /></div>
+                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/asap_android.png" class="apps__brief-image" /></div>
                       </div>
                         <div class="apps__brief-text-container">
                           <h2 class="section__title">ASAP</h2>
@@ -229,8 +229,8 @@
                     <li class="apps__briefs-item">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
-                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/choose_ios.jpg" class="apps__brief-image" /></div>
-                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/choose_android.jpg" class="apps__brief-image" /></div>
+                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/choose_ios.png" class="apps__brief-image" /></div>
+                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/choose_android.png" class="apps__brief-image" /></div>
                       </div>
                     </div>
                         <div class="apps__brief-text-container">
@@ -253,8 +253,8 @@
                     <li class="apps__briefs-item">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
-                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/blackbox_ios.jpg" class="apps__brief-image" /></div>
-                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/blackbox_android.jpg" class="apps__brief-image" /></div>
+                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/blackbox_ios.png" class="apps__brief-image" /></div>
+                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/blackbox_android.png" class="apps__brief-image" /></div>
                       </div>
                     </div>
                         <div class="apps__brief-text-container">
@@ -278,7 +278,7 @@
                     <li class="apps__briefs-item">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
-                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/videos_ios.png"
+                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/video_ios.png"
                             class="apps__brief-image" /></div>
                           <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/videos_android.png"class="apps__brief-image" /></div>
                       </div>
