--- a/ru/apps.html
+++ b/ru/apps.html
@@ -101,31 +101,31 @@
                     </div>
                   </div>
                     <ul class="apps__subapps-list">
-                        <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#"><img src="../assets/img/apps/icon-profile.svg" class="apps__subapps-list-item-icon" />
+                        <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#profile"><img src="../assets/img/apps/icon-profile.svg" class="apps__subapps-list-item-icon" />
                                 <p class="apps__subapps-list-item-title">Мой профиль</p>
                             </a></li>
-                        <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#"><img  src="../assets/img/apps/icon-lenta.svg" class="apps__subapps-list-item-icon" />
+                        <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#lenta"><img  src="../assets/img/apps/icon-lenta.svg" class="apps__subapps-list-item-icon" />
                                 <p class="apps__subapps-list-item-title">Лента SFERA</p>
                             </a></li>
-                        <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#"><img  src="../assets/img/apps/icon-asap.svg" class="apps__subapps-list-item-icon" />
+                        <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#asap"><img  src="../assets/img/apps/icon-asap.svg" class="apps__subapps-list-item-icon" />
                                 <p class="apps__subapps-list-item-title">ASAP</p>
                             </a></li>
-                            <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#"><img  src="../assets/img/apps/icon-meetnet.svg" class="apps__subapps-list-item-icon" />
+                            <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#meetnet"><img  src="../assets/img/apps/icon-meetnet (2).svg" class="apps__subapps-list-item-icon" />
                               <p class="apps__subapps-list-item-title">MeetNet</p>
                           </a></li>
-                        <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#"><img  src="../assets/img/apps/icon-choose.svg" class="apps__subapps-list-item-icon" />
+                        <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#choose"><img  src="../assets/img/apps/icon-choose.svg" class="apps__subapps-list-item-icon" />
                                 <p class="apps__subapps-list-item-title">Choose</p>
                             </a></li>
-                        <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#"><img  src="../assets/img/apps/icon-black_box.svg" class="apps__subapps-list-item-icon" />
+                        <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#blackbox"><img  src="../assets/img/apps/icon-black_box.svg" class="apps__subapps-list-item-icon" />
                                 <p class="apps__subapps-list-item-title">Black Box</p>
                             </a></li>
-                        <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#"><img  src="../assets/img/apps/icon-videos.svg" class="apps__subapps-list-item-icon" />
+                        <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#videos"><img  src="../assets/img/apps/icon-videos.svg" class="apps__subapps-list-item-icon" />
                                 <p class="apps__subapps-list-item-title">Videos</p>
                             </a></li>
-                        <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#"><img src="../assets/img/apps/icon-job_lite.svg" class="apps__subapps-list-item-icon" />
+                        <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#joblite"><img src="../assets/img/apps/icon-job_lite.svg" class="apps__subapps-list-item-icon" />
                                 <p class="apps__subapps-list-item-title">Job Lite</p>
                             </a></li>
-                        <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#"><img  src="../assets/img/apps/icon-find_friends.svg" class="apps__subapps-list-item-icon" />
+                        <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#findfriend"><img  src="../assets/img/apps/icon-find_friends.svg" class="apps__subapps-list-item-icon" />
                                 <p class="apps__subapps-list-item-title">Find Friends</p>
                             </a></li>
                     </ul>
@@ -136,7 +136,7 @@
             <div class="section__wrapper">
                 <ul class="apps__briefs-list">
 
-                    <li class="apps__briefs-item">
+                    <li class="apps__briefs-item" id="profile">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/profile_ios.png" class="apps__brief-image" /></div>
                         <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/profile_android.png" class="apps__brief-image" /></div>
@@ -158,7 +158,7 @@
                         </ul>
                     </li>
 
-                    <li class="apps__briefs-item">
+                    <li class="apps__briefs-item"  id="lenta">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/lenta_ios.png" class="apps__brief-image" /></div>
                         <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/lenta_android.png" class="apps__brief-image" /></div>
@@ -180,7 +180,7 @@
                         </ul>
                     </li>
 
-                    <li class="apps__briefs-item">
+                    <li class="apps__briefs-item"  id="asap">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/asap_ios.png" 
                           class="apps__brief-image" /></div>
@@ -203,7 +203,7 @@
                         </ul>
                     </li>
 
-                    <li class="apps__briefs-item">
+                    <li class="apps__briefs-item" id="meetnet">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/meetnet_ios.png"
                           class="apps__brief-image" /></div>
@@ -226,7 +226,7 @@
                         </ul>
                     </li>
 
-                    <li class="apps__briefs-item">
+                    <li class="apps__briefs-item"id="choose">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
                           <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/choose_ios.png" class="apps__brief-image" /></div>
@@ -250,7 +250,7 @@
                         </ul>
                     </li>
 
-                    <li class="apps__briefs-item">
+                    <li class="apps__briefs-item"id="blackbox">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
                           <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/blackbox_ios.png" class="apps__brief-image" /></div>
@@ -275,7 +275,7 @@
                         </ul>
                     </li>
 
-                    <li class="apps__briefs-item">
+                    <li class="apps__briefs-item" id="videos">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
                           <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/video_ios.png"
@@ -300,7 +300,7 @@
                         </ul>
                     </li>
 
-                    <li class="apps__briefs-item">
+                    <li class="apps__briefs-item" id="joblite">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
                           <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/joblite_ios.png" class="apps__brief-image" /></div>
@@ -325,14 +325,14 @@
                         </ul>
                     </li>
 
-                    <li class="apps__briefs-item">
+                    <li class="apps__briefs-item" id="findfriend">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
                           <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/findfriends_ios.png" class="apps__brief-image" /></div>
                             <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/findfriends_android.png" class="apps__brief-image" /></div>
                       </div>
                     </div>
-                        <div class="apps__brief-text-container">
+                        <div class="apps__brief-text-container" >
                           <h2 class="section__title">Find Friends</h2>
                           <p class="apps__brief-text">Первый сервис имеющий единственной целью&nbsp;— поиск новых друзей в&nbsp;реальной (офлайн) жизни.</p>
                         </div>
