--- a/ru/startups.html
+++ b/ru/startups.html
@@ -81,8 +81,8 @@
   </nav>
 
     <main>
-      <section class="section startups">
-        <div class="section__wrapper">
+      <section class="section__startups">
+        <div class="startups__wrapper">
           <div class="lead">
             <div class="lead__texts">
               <h1 class="lead__title">приглашаем<br><span class="lead__title-color">стартапы</span></h1>
@@ -103,7 +103,7 @@
         <div class="description__wrapper">
           <div class="description__list__main">
             <div class="description__list__items">
-              <h2 class="description__list__heading" >условия сотрудничества</h2>
+              <h2 class="description__list__heading">условия сотрудничества</h2>
               <ol class="description__list">
                 <li class="description__list__paragraf">Сервис должен быть полезным </br> (развивающим) и оказывать позитивное </br> влияние на оффлайн-жизнь </br> пользователя.</li>
                 <li class="description__list__paragraf">У вас есть проработанный макет и </br> концепция (включая полную прорисовку </br> сервиса в Figma, техническое описание- </br> задание), но нет финансовой </br> возможности реализовать сервис.</li>
@@ -121,7 +121,7 @@
       <div class="frame__wrapper">
         <div class="frame__list__main">
           <ul  class="frame__list">
-            <li class="frame__list__item"><img src="../assets/img/startups-png/sfera.png"/></li>
+            <li class="frame__list__item"><img class="frame__list__image" src="../assets/img/startups-png/sfera.png"/></li>
             <li class="frame__list__item">Мы считаем, что многие сервисы, безусловно полезны и нужны пользователям, но зачастую, из - за высокой стоимости разработки или затрат на привлечение пользователя, реализация проектов становится невозможной. В рамках проекта  SFERA, в несколько раз снижается стоимость разработки и нет необходимости нести финансовые расходы на маркетинг.</li>
           </ul>
         </div>
