--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
 			</div>
 			</section>
 			<section class="section-two">
-				<figure class="section-two-image">
+				<div class="section-two-image">
 					<span ><img class="section-two-image-one" src="assets/image-lending/300х600_андроид_меню/300х600-андроид.gif" alt=""></span>
 					<span><img class="section-two-image-two" src="assets/image-lending/300х600_айфон_меню/300х600-айфон.gif" alt=""></span>
-				</figure>
+				</div>
 				<div class="section-two-content">
-					<span class="section-two-content-message">Месcенджер</span>
+					<span class="section-two-content-message">МЕССЕНДЖЕР</span>
 					<span class="section-two-content-number">ЦИФРОВАЯ<br>ЭКОСИСТЕМА</span>
-					<span class="section-two-content-social">Социальная сеть</span>
+					<span class="section-two-content-social">СОЦИАЛЬНАЯ СЕТЬ</span>
 				</div>
 			</section>
 			<section class="section-as" id="abot-us">
@@ -128,7 +128,7 @@
 				</div>
 			</section>
 			<p class="section-about-as-heading"><span class="about-as-heading-color">БУДЬ ПЕРВЫМ</span> - ПОМОГИ НАМ <br> ПРОТЕСТИРОВАТЬ ПРИЛОЖЕНИЕ</p>
-			
+			</section>
 			<section class="block-for">
 				<div class="block-for-list">
 					<ul class="list-left-for">
@@ -153,7 +153,7 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front" src="assets/img/apps/asap_ios.png" alt="">
+								<img class="front" src="assets/image-lending/1920/ios1.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
@@ -171,7 +171,7 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front-two" src="assets/img/apps/profile_ios.png" alt="">
+								<img class="front-two" src="assets/image-lending/1920/ios2.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
@@ -189,7 +189,7 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front-three" src="assets/img/apps/lenta_ios.png" alt="">
+								<img class="front-three" src="assets/image-lending/1920/ios3.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
@@ -207,7 +207,7 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img  class="front-four" src="assets/img/apps/video_ios.png" alt="">
+								<img  class="front-four" src="assets/image-lending/1920/ios4.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
@@ -225,7 +225,7 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front-five" src="assets/img/apps/blackbox_ios.png" alt="">
+								<img class="front-five" src="assets/image-lending/1920/ios5.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
@@ -243,7 +243,7 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front-six" src="assets/img/apps/findfriends_ios.png" alt="">
+								<img class="front-six" src="assets/image-lending/1920/ios6.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
@@ -261,7 +261,7 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front-seven" src="assets/img/apps/meetnet_ios.png" alt="">
+								<img class="front-seven" src="assets/image-lending/1920/ios7.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
@@ -279,7 +279,7 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front-eight" src="assets/img/apps/joblite_ios.png" alt="">
+								<img class="front-eight" src="assets/image-lending/1920/ios8.png" alt="">
 							</div> 
 						</div>
 						<div class="product-back">
@@ -297,7 +297,7 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front-nine" src="assets/img/apps/choose_ios.png" alt="">
+								<img class="front-nine" src="assets/image-lending/1920/ios9.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
@@ -309,7 +309,11 @@
 					</div>
 					<p class="card-block-botton">Трудный выбор? Спроси<br>мнение других пользователей</p>
 				</div>
+				<div class="card-block-link" >
+					<a href="./ru/apps.html">Приложения SFERA &#8702; </a>
+				</div>
 			</div>
+		
 		</section> 
 		<section class="block-seven" id="download">
 				<article>
@@ -323,10 +327,10 @@
 							<a href="" class="block-six-link">#Сеть</a>
 						</div>
 						<p class="block-seven-p">ПРИСОЕДИНЯЙСЯ</p>
-						<p class="block-seven-text">SFERA находится в не политики.<br>Мы считаем своим домом весь мир<br>и хотим работать на благо всех людей <br>на планете.</p>
-						<p class="block-seven-text">Каждый сервис в системе, либо<br>
-							полностью уникален, либо имеет<br>
-							отличительные особенности в сравнении<br>с аналогами.</p>
+						<p class="block-seven-text">SFERA находится в не политики.Мы считаем своим домом весь мир и хотим работать на благо всех людей на планете.</p>
+						<p class="block-seven-text">Каждый сервис в системе, либо
+							полностью уникален, либо имеет
+							отличительные особенности в сравнении с аналогами.</p>
 					</div>
 				</article>
 			</section>
