--- a/ru/apps.html
+++ b/ru/apps.html
@@ -20,7 +20,6 @@
 
 <body>
   <div class="page">
-
       <nav class="nav_menu">
           <input type="checkbox" class="myCheckBox" id="myCheck">
           <label for="myCheck" class="checkButton">
@@ -69,20 +68,18 @@
               <li class="nav_list-item"><a class="nav_list-link" href="team.html">Команда</a></li>
           </ul>
           <div class="langs">
-              <img src="../assets/img/language_24px.svg" alt="">
-              <ul class="langs__list">
-                  <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">RU</a>
-                      <div class="dropdown-menu__content langs__submenu">
-                          <ul class="langs__list">
-                              <li class="langs__item"> <a class="langs__link  button_theme_dark" href="#">EN</a></li>
-                              <li class="langs__item"> <a class="langs__link  button_theme_dark" href="#">CS</a></li>
-                          </ul>
-                      </div>
-                  </li>
-
-              </ul>
+            <img src="../assets/img/language_24px.svg" alt="">
+            <ul class="langs__list">
+              <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">RU</a>
+              <div class="dropdown-menu__content langs__submenu">
+                <ul class="langs__list">
+                  <li class="langs__item"> <a class="langs__link  button_theme_dark" href="#">EN</a></li>
+                  <li class="langs__item"> <a class="langs__link  button_theme_dark" href="#">CS</a></li>
+                </ul>
+              </div>
+              </li>
+            </ul>
           </div>
-
       </nav>
     <main>
       <article class="apps">
@@ -483,5 +480,5 @@
   <script src="../assets/js/apps.js"></script>
   <script src="https://kit.fontawesome.com/d455f88091.js" crossorigin="anonymous"></script>
   <script src="../assets/js/main.js"></script>
-
+</body>
 </html>
