--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 				<div class="video-container">
 					<span class="close">&#10006;</span>
-					<video class="video" controls="controls autoplay">
+					<video class="video" controls>
 						<source src="assets/video/video.mp4">
 					</video>
 		
