--- a/index.html
+++ b/index.html
@@ -306,15 +306,15 @@
 					</div>
 					<p class="card-block-botton">Трудный выбор? Спроси<br>мнение других пользователей</p>
 				</div>
-				<div class="card-block-link" >
-					<a href="./ru/apps.html">Приложения SFERA &#8702; </a>
-				</div>
+				
+					<a class="card-block-link" href="./ru/apps.html">Приложения SFERA &#8702; </a>
+			
 			</div>
 		
 		</section> 
 		<section class="block-seven" id="download">
 				<article>
-					<img src="./assets/image-lending/1920/SFERA-logo 3.png" alt="image sfera" class="block-seven-image">
+					<img src="./assets/image-lending/1920/logosfera.gif" alt="image sfera" class="block-seven-image">
 				</article>
 				<article>
 					<div class="block-seven-paragraf">
