--- a/ru/apps.html
+++ b/ru/apps.html
@@ -132,9 +132,9 @@
             <div class="section__wrapper">
                 <ul class="apps__briefs-list">
 
-                    <li class="apps__briefs-item" id="profile">
-                      <div class="apps__brief-images-container">
-                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/profile_ios.png" class="apps__brief-image" /></div>
+                    <li class="apps__briefs-item">
+                      <div class="apps__brief-images-container"id="profile">
+                        <div class="apps__brief-image-wrapper" ><img src="../assets/img/apps/profile_ios.png" class="apps__brief-image" /></div>
                         <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/profile_android.png" class="apps__brief-image" /></div>
                     </div>
                         <div class="apps__brief-text-container">
@@ -321,14 +321,14 @@
                         </ul>
                     </li>
 
-                    <li class="apps__briefs-item" id="findfriend">
-                      <div class="apps__brief-images-container">
-                        <div class="apps__brief-images-container">
+                    <li class="apps__briefs-item">
+                      <div class="apps__brief-images-container" id="findfriend">
+                        <div class="apps__brief-images-container" >
                           <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/findfriends_ios.png" class="apps__brief-image" /></div>
                             <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/findfriends_android.png" class="apps__brief-image" /></div>
                       </div>
                     </div>
-                        <div class="apps__brief-text-container" >
+                        <div class="apps__brief-text-container">
                           <h2 class="section__title">Find Friends</h2>
                           <p class="apps__brief-text">Первый сервис имеющий единственной целью&nbsp;— поиск новых друзей в&nbsp;реальной (офлайн) жизни.</p>
                         </div>
