--- a/ru/investment.html
+++ b/ru/investment.html
@@ -88,7 +88,7 @@
               <p class="investment-body__text">Наша главная цель в работе с инвесторами — это Х100 для инвесторов</p>
               <ul class="lead__download-links-list">
                 <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
-                <li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
+                <li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios button_type_ios-invest">Скачать на iOS</a></li>
               </ul>
             </div>
             <div class="investment__column">
