--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front-two" src="assets/image-lending/1920/ios2.png" alt="">
+								<img class="front" src="assets/image-lending/1920/ios2.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back-two" src="assets/img/apps/profile_android.png" alt="">
+								<img class="back" src="assets/img/apps/profile_android.png" alt="">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -186,12 +186,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front-three" src="assets/image-lending/1920/ios3.png" alt="">
+								<img class="front" src="assets/image-lending/1920/ios3.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back-three" src="assets/img/apps/lenta_android.png" alt="">
+								<img class="back" src="assets/img/apps/lenta_android.png" alt="">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -204,12 +204,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img  class="front-four" src="assets/image-lending/1920/ios4.png" alt="">
+								<img  class="front" src="assets/image-lending/1920/ios4.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back-four" src="assets/img/apps/videos_android.png" alt="">
+								<img class="back" src="assets/img/apps/videos_android.png" alt="">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -222,12 +222,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front-five" src="assets/image-lending/1920/ios5.png" alt="">
+								<img class="front" src="assets/image-lending/1920/ios5.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back-five" src="assets/img/apps/blackbox_android.png" alt="">
+								<img class="back" src="assets/img/apps/blackbox_android.png" alt="">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -240,12 +240,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front-six" src="assets/image-lending/1920/ios6.png" alt="">
+								<img class="front" src="assets/image-lending/1920/ios6.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back-six" src="assets/img/apps/findfriends_android.png" alt="">
+								<img class="back" src="assets/img/apps/findfriends_android.png" alt="">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -258,12 +258,12 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front-seven" src="assets/image-lending/1920/ios7.png" alt="">
+								<img class="front" src="assets/image-lending/1920/ios7.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back-seven" src="assets/img/apps/meetnet_android.png" alt="">
+								<img class="back" src="assets/img/apps/meetnet_android.png" alt="">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -276,17 +276,17 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front-eight" src="assets/image-lending/1920/ios8.png" alt="">
+								<img class="front" src="assets/image-lending/1920/ios8.png" alt="">
 							</div> 
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back-eight" src="assets/img/apps/joblite_android.png" alt="">
+								<img class="back" src="assets/img/apps/joblite_android.png" alt="">
 							</div>
 						</div>
 						<div class="left-side"></div>
 					</div>
-					<article class="card-block-botton">Платформа для поиска<br>вакансий и сотрудников</article>
+					<p class="card-block-botton">Платформа для поиска<br>вакансий и сотрудников</p>
 				</div>
 
 				<div class="card-block">
@@ -294,24 +294,24 @@
 					<div class="product-inner">
 						<div class="product-front">
 							<div>
-								<img class="front-nine" src="assets/image-lending/1920/ios9.png" alt="">
+								<img class="front" src="assets/image-lending/1920/ios9.png" alt="">
 							</div>
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back-nine" src="assets/img/apps/choose_android.png" alt="">
+								<img class="back" src="assets/img/apps/choose_android.png" alt="">
 							</div>
 						</div>
 						<div class="left-side"></div>
 					</div>
 					<p class="card-block-botton">Трудный выбор? Спроси<br>мнение других пользователей</p>
 				</div>
-				
-					<a class="card-block-link" href="./ru/apps.html">Приложения SFERA &#8702; </a>
-			
+				<div class="card-block card-block__link">
+					<a  href="./ru/apps.html">Приложения SFERA &#8702; </a>
+				</div>
 			</div>
-		
 		</section> 
+
 		<section class="block-seven" id="download">
 				<article>
 					<img src="./assets/image-lending/1920/logosfera.gif" alt="image sfera" class="block-seven-image">
