--- a/ru/investment.html
+++ b/ru/investment.html
@@ -108,7 +108,7 @@
             <div class="card-body-content">
               <ol class="card-body__link">
                 <li class="card-body__list_1"> Скопируйте номер карты и отправьте желаемую сумму.</li>
-                <p id=""card-body__list_2" class="card-body__list_2" type="text" >4584-4328-3958-7574<a onclick="copyText()" class="card-body__list_copy" href="#"><img src="../assets/img/investment/content_copy.svg" alt="img"></a></p>
+                <p id=""card-body__list_2" class="card-body__list_2" type="text" >4584-4328-3958-7574<a onclick="copyText()" class="card-body__list_copy" href=""><img src="../assets/img/investment/content_copy.svg" alt="img"></a></p>
                 <li class="card-body__list_3"> Отправьте E-mail, указав сумму перевода. Обратным письмом мы подтвердим отправленную вами сумму и привязку её к вашему E-mail.</li>
                 <div class="card-body__list_4">invest@sfera.zone <a class="card-body__list_copy" href=""><img src="../assets/img/investment/content_copy.svg" alt=""></a></div>
               </ol>
