--- a/ru/news.html
+++ b/ru/news.html
@@ -85,14 +85,12 @@
       <section class="apps__lead">
         <div class="section__wrapper">
           <div class="lead__flex">
-            <div class="lead__image-container apps__lead-image-container">
-              <div class="apps__lead-image-wrapper">
-                <img src="../assets/img/new/scrin.png" class="apps__lead-image">
-              </div>
+            <div class="apps__lead-image-wrapper">
+              <img src="../assets/img/new/scrin.png" class="apps__lead-image">
             </div>
             <div class="lead__text-container apps__lead-text-container">
-              <p class="lead__text">Обновление 05.12.2022</p>
-              <p class="lead__text">06.12.2022  БЕЗ КАТЕГОРИИОТ   DIANA AKHMETOVA</p>
+              <h3 class="lead__text">Обновление<br>05.12.2022</h3>
+              <p class="lead__text">06.12.2022 от DIANA AKHMETOVA</p>
               <p class="lead__text">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
               <details>
                 <summary>читать больше</summary>
@@ -100,64 +98,58 @@
               </details>
             </div>
           </div>
-      </section>
-      <section class="apps__lead">
-        <div class="section__wrapper">
-          <div class="lead__flex">
-            <div class="lead__image-container apps__lead-image-container">
+        </section>
+        <section class="apps__lead">
+          <div class="section__wrapper">
+            <div class="lead__flex">
               <div class="apps__lead-image-wrapper">
                 <img src="../assets/img/new/scrin.png" class="apps__lead-image">
               </div>
-            </div>
-            <div class="lead__text-container apps__lead-text-container">
-              <p class="lead__text">Обновление 05.12.2022</p>
-              <p class="lead__text">06.12.2022  БЕЗ КАТЕГОРИИОТ   DIANA AKHMETOVA</p>
-              <p class="lead__text">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
-              <details>
-                <summary>читать больше</summary>
-                <p>Раскрывающийся текст</p>
-              </details>
-            </div>
-          </div>
-      </section>
-      <section class="apps__lead">
-        <div class="section__wrapper">
-          <div class="lead__flex">
-            <div class="lead__image-container apps__lead-image-container">
-              <div class="apps__lead-image-wrapper">
-                <img src="../assets/img/new/scrin.png" class="apps__lead-image">
+              <div class="lead__text-container apps__lead-text-container">
+                <h3 class="lead__text">Обновление<br>05.12.2022</h3>
+                <p class="lead__text">06.12.2022 от DIANA AKHMETOVA</p>
+                <p class="lead__text">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
+                <details>
+                  <summary>читать больше</summary>
+                  <p>Раскрывающийся текст</p>
+                </details>
               </div>
             </div>
-            <div class="lead__text-container apps__lead-text-container">
-              <p class="lead__text">Обновление 05.12.2022</p>
-              <p class="lead__text">06.12.2022  БЕЗ КАТЕГОРИИОТ   DIANA AKHMETOVA</p>
-              <p class="lead__text">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
-              <details>
-                <summary>читать больше</summary>
-                <p>Раскрывающийся текст</p>
-              </details>
-            </div>
-          </div>
-      </section>
-      <section class="apps__lead">
-        <div class="section__wrapper">
-          <div class="lead__flex">
-            <div class="lead__image-container apps__lead-image-container">
-              <div class="apps__lead-image-wrapper">
-                <img src="../assets/img/new/scrin.png" class="apps__lead-image">
+          </section>
+          <section class="apps__lead">
+            <div class="section__wrapper">
+              <div class="lead__flex">
+                <div class="apps__lead-image-wrapper">
+                  <img src="../assets/img/new/scrin.png" class="apps__lead-image">
+                </div>
+                <div class="lead__text-container apps__lead-text-container">
+                  <h3 class="lead__text">Обновление<br>05.12.2022</h3>
+                  <p class="lead__text">06.12.2022 от DIANA AKHMETOVA</p>
+                  <p class="lead__text">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
+                  <details>
+                    <summary>читать больше</summary>
+                    <p>Раскрывающийся текст</p>
+                  </details>
+                </div>
               </div>
-            </div>
-            <div class="lead__text-container apps__lead-text-container">
-              <p class="lead__text">Обновление 05.12.2022</p>
-              <p class="lead__text">06.12.2022  БЕЗ КАТЕГОРИИОТ   DIANA AKHMETOVA</p>
-              <p class="lead__text">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
-              <details>
-                <summary>читать больше</summary>
-                <p>Раскрывающийся текст</p>
-              </details>
-            </div>
-          </div>
-      </section>
+            </section>
+            <section class="apps__lead">
+              <div class="section__wrapper">
+                <div class="lead__flex">
+                  <div class="apps__lead-image-wrapper">
+                    <img src="../assets/img/new/scrin.png" class="apps__lead-image">
+                  </div>
+                  <div class="lead__text-container apps__lead-text-container">
+                    <h3 class="lead__text">Обновление<br>05.12.2022</h3>
+                    <p class="lead__text">06.12.2022 от DIANA AKHMETOVA</p>
+                    <p class="lead__text">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
+                    <details>
+                      <summary>читать больше</summary>
+                      <p>Раскрывающийся текст</p>
+                    </details>
+                  </div>
+                </div>
+              </section>
     </main>
     <footer class="footer section section_theme_dark" role="footer">
       <div class="footer__container">
