--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<li class="nav_list-item"><a class="nav_list-link" href="./ru/team.html">Команда</a></li>
 					</ul>
 					<div class="langs">
-							<img src="../assets/img/language_24px.svg" alt="">
+							<img src="./assets/img/language_24px.svg" alt="">
 							<ul class="langs__list">
 									<li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">RU</a>
 											<div class="dropdown-menu__content langs__submenu">
